# model-builder

./: .gitignore  .pylintrc  README.md  backup.csv  backup.json  debug.json  dump.rdb  model.py  nonce_a  preseason_league_efficiency.csv  pyproject.toml  sample.py  team_season_stats.json  team_stats.json  teams.json
.fix/: current.show  ncaab.show
gdg_model_builder/: __init__.py
gdg_model_builder/clock/: __init__.py  clock.py  predicates.py  predicates__test.py  retro_clock.py  retro_clock__test.py  weakref_clock.py
gdg_model_builder/collection/: __init__.py  collection.py  redis_collection.py  redis_collection__test.py
gdg_model_builder/completion_stream/: completion_stream.py
gdg_model_builder/data/: __init__.py  bufferized.py
gdg_model_builder/environment/: environment.py
gdg_model_builder/event/: __init__.py  event.py  event__test.py  event_builder.py
gdg_model_builder/lock/: lock.py
gdg_model_builder/model/: __init__.py  model.py  modellike.py  standard_model.py
gdg_model_builder/schedule/: multiplexed_schedule.py  redis_multiplexed_schedule.py  redis_multiplexed_schedule__test.py  redis_schedule.py  redis_schedule__test.py  schedule.py  weakref_schedule.py
gdg_model_builder/serializer/: model_serializer.py  redis_model_serializer.py  redis_model_serializer__test.py  redis_staged_model_serializer.py  serializer.py
gdg_model_builder/shape/: __init__.py  pydantic_event.py  pydantic_shape.py  pydantic_shape__test.py  shape.py
gdg_model_builder/state/: redis_state.py  state.py
gdg_model_builder/structs/: entry.py  (+4 more)
model_builder/: __init__.py
(+76 files in other folders)
